tests/sksl/errors/FieldAfterRuntimeArray.sksl
buffer broken { float x[]; float y; };
